alarm connection fixes

--- a/lsyncd.conf
+++ b/lsyncd.conf
@@ -6,7 +6,10 @@ sync {
   default.rsync,
   source=".",
   target="maluzyn:/rw/monitoring-test",
-  exclude = { '.idea', '.angular', 'node_modules', 'dist', 'postgres-data', '*.npz', '.git', '*.orig', '*.so', '*.pyc', '*~', '__pycache__' },
+  exclude = {
+    '.idea', '.angular', 'node_modules', 'dist', 'postgres-data',
+    '*.npz', '.git', '*.orig', '*.so', '*.pyc', '*.egg-info', '*~', '__pycache__'
+  },
   delete = false,
   delay = 1,
   rsync = {
