--- a/lsyncd.conf
+++ b/lsyncd.conf
@@ -5,7 +5,7 @@ settings {
 sync {
   default.rsync,
   source=".",
-  target="maluzyn:/rw/monitoring-test",
+  target="maluzyn:/rw/alarm-monitor/test",
   exclude = {
     '.idea', '.angular', 'node_modules', 'dist', 'postgres-data',
     '*.npz', '.git', '*.orig', '*.so', '*.pyc', '*.egg-info', '*~', '__pycache__'
